--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
             "email": "zk@pcuu.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php-di/php-di": "^6.0",
+        "relay/relay": "2.x@dev",
+        "zendframework/zend-diactoros": "^1.7"
+    },
     "autoload": {
         "psr-4": {
             "ExampleApp\\": "src/"
